--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,10 +2,14 @@
 logging.level.org.springframework=INFO
 
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
+
+spring.datasource.initialize=true
 
 ################### Hibernate Configuration ##########################
-spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
