--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,14 +2,11 @@
 logging.level.org.springframework=INFO
 
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/prod
 spring.datasource.username=root
 spring.datasource.password=admin
 
-spring.datasource.initialize=true
-
 ################### Hibernate Configuration ##########################
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
