testing the CI 4

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        # For now -DskipTests
+        # For now
         run: mvn -B package --file pom.xml -DskipTests
 
       - name: Run Unit Tests
