--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,14 +21,11 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        # For now
-        run: mvn -B package --file pom.xml -DskipTests
+
+        run: mvn -B package --file pom.xml
 
       - name: Run Unit Tests
         run: mvn test
-        # For now
-
-        continue-on-error: true
 
       - name: Run Integration Tests
         run: mvn failsafe:integration-test
