--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,10 +1,7 @@
 logging.level.org.springframework=INFO
 
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
-spring.datasource.username=root
-spring.datasource.password=root
-
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 ################### Hibernate Configuration ##########################
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
