--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,7 @@
 logging.level.org.springframework=INFO
 
 ################### DataSource Configuration ##########################
+## FOR NOW ##
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 ################### Hibernate Configuration ##########################
 spring.jpa.hibernate.ddl-auto=validate
