--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,8 +29,6 @@ jobs:
 
       - name: Run Integration Tests
         run: mvn failsafe:integration-test
-        # For now
-        continue-on-error: true
 
       - name: Generate JaCoCo Coverage Report
         run: mvn jacoco:report
@@ -48,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: javadocs
-          path: target/site/apidocs/
+          path: target/reports/apidocs/
 
       - name: Deploying reports to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
