Config of TestContainers for the Mysql DB

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,16 @@
-logging.level.org.springframework=INFO
+################### JPA Configuration ##########################
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 ################### DataSource Configuration ##########################
+# when Spring try to establish the connexion -> "jdbc:tc" trigger the TestContainer
+spring.datasource.url=jdbc:tc:mysql:8.0.32:///testdb
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-################### Hibernate Configuration ##########################
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+################### LOGGING Configuration ##########################
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
+logging.level.org.testcontainers=INFO
