--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-logging.level.org.springframework=INFO
+################### JPA Configuration ##########################
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 ################### DataSource Configuration ##########################
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
 spring.datasource.password=root
 
-################### Hibernate Configuration ##########################
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+################### LOGGING Configuration ##########################
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
