ci-cd_prod.yml & ci_dev.yml

--- a/.github/workflows/ci-cd_prod.yml
+++ b/.github/workflows/ci-cd_prod.yml
@@ -1,8 +1,6 @@
-name: TradingApp CI/CD
+name: TradingApp CI/CD - PR to main (heavy)
 
 on:
-  push:
-    branches: [ dev ]
   pull_request:
     branches: [ main ]
 
