--- a/pom.xml
+++ b/pom.xml
@@ -107,16 +107,20 @@
 			<version>1.20.4</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- needed for the DataSourceScriptDatabaseInitializer used by TestContainers -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.17.0</version>
+		</dependency>
+
+		<!--
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.26.0</version>
 		</dependency>
-		<dependency>
-			<groupId>io.rest-assured</groupId>
-			<artifactId>rest-assured</artifactId>
-			<scope>test</scope>
-		</dependency>
+		-->
 	</dependencies>
 
 	<build>
