--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,13 @@
-
-logging.level.org.springframework=INFO
+################### JPA Configuration ##########################
+spring.jpa.hibernate.ddl-auto=none
 
 ################### DataSource Configuration ##########################
 spring.datasource.url=jdbc:mysql://localhost:3306/prod
 spring.datasource.username=root
 spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-################### Hibernate Configuration ##########################
-spring.jpa.hibernate.ddl-auto=update
+################### LOGGING Configuration ##########################
+logging.level.org.springframework=INFO
 spring.jpa.show-sql=true
 
