--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 ################### JPA Configuration ##########################
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/${SPRING_DATASOURCE_NAME}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ################### LOGGING Configuration ##########################
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
