--- a/.github/workflows/ci-cd_prod.yml
+++ b/.github/workflows/ci-cd_prod.yml
@@ -21,23 +21,21 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven and Run Unit Tests
-        run: mvn -B package --file pom.xml
+      # Jacoco
 
-      - name: Run Integration Tests
-        run: mvn failsafe:integration-test
-
-      - name: Generate JaCoCo Coverage Report
-        run: mvn jacoco:report
-
-      - name: Generate JavaDocs
-        run: mvn javadoc:javadoc
+      - name: Build, Test & Generate JaCoCo Coverage Report
+        run: mvn -B verify --file pom.xml
 
       - name: Upload JaCoCo Coverage Report
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
-          path: target/site/jacoco/
+          path: target/site/jacoco-aggregate/
+
+      # JavaDocs
+
+      - name: Generate JavaDocs
+        run: mvn javadoc:javadoc
 
       - name: Upload JavaDocs
         uses: actions/upload-artifact@v4
@@ -45,10 +43,12 @@ jobs:
           name: javadocs
           path: target/reports/apidocs/
 
-      - name: Prepare GitHub Pages content
+      # GitHub Pages
+
+      - name: Prepare content GitHub Pages
         run: |
           mkdir -p gh-pages-build
-          cp -r target/site/jacoco  gh-pages-build/jacoco
+          cp -r target/site/jacoco-aggregate gh-pages-build/jacoco
           cp -r target/reports/apidocs gh-pages-build/javadocs
 
       - name: Deploy JavaDocs and JaCoCo to GitHub Pages
@@ -57,7 +57,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: gh-pages-build
 
-      # Docker build and push
+      # Docker/DockerHub
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
